css fix for scrollbar

--- a/packages/frontend/src/Emoji.css
+++ b/packages/frontend/src/Emoji.css
@@ -12,6 +12,6 @@
     top: 0;
   }
   to {
-    top: 90%;
+    top: 95%;
   }
 }
